# Vex

./: .dockerignore  SECURITY.md
.github/workflows/: ci.yml  codeql.yml
docs/plans/: 2026-02-10-phase1-foundation.md  2026-02-15-sessions-page-design.md  2026-02-19-monetization-gap-closure-implementation.md  2026-02-20-live-agent-demo.md  2026-02-20-pricing-redesign.md  2026-02-20-tool-usage-analytics-redesign-design.md  2026-03-08-docker-self-hosting-design.md  2026-03-08-session-memory-design.md
scripts/: test_correction_gating.py  test_plan_enforcement.py  test_quota_enforcement.py
sdk/python/: pyproject.toml
sdk/python/agentguard/: __init__.py  config.py  exceptions.py  guard.py  models.py  transport.py
sdk/python/tests/: test_config.py  test_guard.py  test_models.py  test_transport.py
services/alert-service/: Dockerfile  pyproject.toml
services/alert-service/app/: __init__.py  (+7 more)
services/async-worker/: Dockerfile  pyproject.toml
services/dashboard-api/: pyproject.toml
services/dashboard-api/app/: main.py  websocket.py
services/dashboard-api/tests/: conftest.py  test_websocket.py
services/ingestion-api/: Dockerfile  pyproject.toml
services/migrations/: pyproject.toml
services/scripts/: run_retention.py
services/shared/: conftest.py  models.py  pyproject.toml
services/shared/shared/: auth.py  models.py  plan_limits.py  redis_config.py
services/shared/tests/: test_auth.py  test_models.py
services/storage-worker/: Dockerfile  pyproject.toml
services/sync-gateway/: Dockerfile  pyproject.toml
services/verification-engine/: pyproject.toml
(+64 files in other folders)
