[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vex-shared"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
